Fixed text alignment of ChannelInfo texts, simplified badge margins. Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/ChannelInfo.less
+++ b/css/ChannelInfo.less
@@ -4,15 +4,12 @@
 	text-align: right;
 	white-space: normal;
   max-width: 800px;
+
+  .moon-marquee {
+    text-align: right;
+  }
 }
 .moon-video-player-channel-info-badges > * {
-  margin: 3px 0px 3px 10px;
-}
-
-.moon-video-player-channel-info-badges  > :first-child{
-  margin:3px 10px;
-}
-.enyo-locale-right-to-left .moon-video-player-channel-info-badges  > :first-child {
   margin: 3px 0 3px 20px;
 }
 .moon-video-player-channel-info-no {
